# zmod

./: .gitignore  .mise.toml  .oxfmtrc.json  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  bench-result.json  lefthook.yml  package.json  pnpm-workspace.yaml
.changeset/: batch-renames-api.md  config.json  dry-nights-heal.md  fix-collection-spread-perf.md  huge-rules-yell.md  migrate-default-glob.md  pluggable-printer.md  pretty-facts-win.md  some-suns-move.md  tall-birds-cross.md
.github/badges/: benchmark.json  compat.json
.github/workflows/: benchmark.yml  ci.yml  compat.yml  docs.yml  release.yml
benchmark/: RESULTS.md  generate-fixtures.ts  jscodeshift-compat.bench.ts  package.json  rename-unsafe-lifecycles.bench.ts  vitest.config.ts
crates/zmod-core/: Cargo.toml
crates/zmod-core/src/: lib.rs
crates/zmod-napi/: Cargo.toml  index.d.ts  index.js
crates/zmod-napi/src/: lib.rs
docs/: package.json  rspress.config.ts
docs/docs/: index.md
docs/docs/api/: overview.md
docs/docs/guide/: getting-started.md  migration.md
fixtures/custom-parser/rename-decorator/: expected-output.ts  input.ts  transform.ts
fixtures/react-hooks-migration/: README.md  codemod.ts  package.json  tsconfig.json
fixtures/react-hooks-migration/src/: Counter.tsx
fixtures/react/create-class-to-class/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/create-element-to-jsx/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/error-boundaries/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/find-dom-node/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/manual-bind-to-arrow/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/pure-component/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/pure-render-mixin/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/react-dom-to-react-dom-factories/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/react-native-view-proptypes/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/react-to-react-dom/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/remove-context-provider/: codemod.ts  expected-output.tsx  input.tsx  transform.ts
fixtures/react/remove-forward-ref/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/rename-unsafe-lifecycles/: expected-output.tsx  input.tsx  transform.ts
fixtures/react/replace-act-import/: codemod.ts  expected-output.tsx  input.tsx  transform.ts
fixtures/react/replace-react-prop-types/: codemod.ts  expected-output.tsx  (+2 more)
fixtures/rename-unsafe-lifecycles/: codemod.ts  jscodeshift.ts  package.json
scripts/: compat-check.ts
(+21 files in other folders)
