[workspace]
members = ["crates/zmod-core", "crates/zmod-napi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zmod contributors"]
repository = "https://github.com/yourusername/zmod"

[workspace.dependencies]
# SWC
swc_core = { version = "56.0", features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_codegen",
] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NAPI
napi = "3.8"
napi-derive = "3.5"
napi-build = "2.3"
