[workspace]
members = ["crates/zmod-core", "crates/zmod-napi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zmod contributors"]
repository = "https://github.com/yourusername/zmod"

[workspace.dependencies]
# oxc
oxc_allocator = "0.113.0"
oxc_parser = "0.113.0"
oxc_span = "0.113.0"
oxc_ast = "0.113.0"
oxc_ast_visit = "0.113.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NAPI
napi = "3.8.3"
napi-derive = "3.5.2"
napi-build = "2.3.1"
