[package]
name = "zmod-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zmod-core = { path = "../zmod-core" }
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
